fix test softmax probabilities

--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -1512,25 +1512,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TopKV2(values=array([[ 362.93988037,  310.75006104,  266.04504395,  207.42707825,\n",
-      "         104.70184326],\n",
-      "       [ 394.60824585,  135.6227417 ,  124.35812378,   82.06538391,\n",
-      "          33.40951157],\n",
-      "       [ 240.33221436,  110.75222015,   81.79749298,   80.04139709,\n",
-      "          79.1847229 ],\n",
-      "       [   4.64975166,    4.51580095,    3.94154263,    3.86766362,\n",
-      "           2.92313409],\n",
-      "       [ 106.94654083,   80.51425171,   80.43984222,   77.20594025,\n",
-      "          69.81855774]], dtype=float32), indices=array([[18, 26, 27, 11, 19],\n",
-      "       [13, 12,  1, 17, 42],\n",
-      "       [12,  1, 26, 17, 18],\n",
+      "TopKV2(values=array([[  1.00000000e+00,   2.15898419e-23,   0.00000000e+00,\n",
+      "          0.00000000e+00,   0.00000000e+00],\n",
+      "       [  1.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
+      "          0.00000000e+00,   0.00000000e+00],\n",
+      "       [  1.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
+      "          0.00000000e+00,   0.00000000e+00],\n",
+      "       [  2.33954608e-01,   2.04624459e-01,   1.15228608e-01,\n",
+      "          1.07022502e-01,   4.16170359e-02],\n",
+      "       [  1.00000000e+00,   3.31590961e-12,   3.07813063e-12,\n",
+      "          1.21288965e-13,   7.50795777e-17]], dtype=float32), indices=array([[18, 26,  0,  1,  2],\n",
+      "       [13,  0,  1,  2,  3],\n",
+      "       [12,  0,  1,  2,  3],\n",
       "       [32, 40, 38, 41,  3],\n",
       "       [11, 30, 27, 21, 19]], dtype=int32))\n"
      ]
@@ -1542,7 +1542,7 @@
     "\n",
     "with tf.Session() as sess:\n",
     "    saver.restore(sess, tf.train.latest_checkpoint('.'))\n",
-    "    top_five = tf.nn.top_k(logits, k=5)\n",
+    "    top_five = tf.nn.top_k(tf.nn.softmax(logits), k=5)\n",
     "    res = sess.run(top_five, feed_dict={x:normalized_test, y : test_labels, keep_prob : 1.0})\n",
     "    print(res)"
    ]
